fix(App): fix content jump on transition

--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -8,9 +8,9 @@
     --font-main: "Raleway", sans-serif;
     --font-title: "DM Serif Text", serif;
 
-    --font-main-m: 15px/1.5 var(--font-main);
+    --font-main-m: 15px/1.55 var(--font-main);
     --font-main-l: 18px/1.5 var(--font-main);
-    --font-main-xl: 24px/1 var(--font-main);
+    --font-main-xl: 24px/1.1 var(--font-main);
     --font-main-xxl: 42px/1 var(--font-main);
     --font-main-xxxl: 90px/1 var(--font-main);
     --font-main-about: 65px/1 var(--font-main);
